--- a/matui/package.json
+++ b/matui/package.json
@@ -1,24 +1,27 @@
 {
+	"name": "koticloud",
+	"private": true,
 	"dependencies": {
-		"@material-ui/core": "^4.9.5",
+		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.9.1",
 		"axios": "^0.21.1",
 		"mui-rte": "^1.29.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-pdf": "^5.2.0",
+		"react-hotkeys-hook": "^3.3.1",
+		"react-pdf": "^5.3.0",
 		"react-virtualized-auto-sizer": "^1.0.5",
 		"typeface-roboto": "^1.1.13"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.16",
-		"@babel/preset-env": "^7.13.15",
-		"@babel/preset-react": "^7.0.0",
-		"babel-loader": "^8.0.6",
-		"css-loader": "^5.2.4",
-		"file-loader": "^6.0.0",
+		"@babel/core": "^7.14.3",
+		"@babel/preset-env": "^7.14.2",
+		"@babel/preset-react": "^7.13.13",
+		"babel-loader": "^8.2.2",
+		"css-loader": "^5.2.6",
+		"file-loader": "^6.2.0",
 		"style-loader": "^2.0.0",
-		"webpack": "^5.35.0",
-		"webpack-cli": "^4.5.0"
+		"webpack": "^5.37.1",
+		"webpack-cli": "^4.7.0"
 	}
 }
