--- a/matui/package.json
+++ b/matui/package.json
@@ -10,7 +10,8 @@
 		"react-dom": "^17.0.2",
 		"react-pdf": "^5.4.0",
 		"react-virtualized-auto-sizer": "^1.0.6",
-		"typeface-roboto": "^1.1.13"
+		"typeface-roboto": "^1.1.13",
+		"worker-loader": "^3.0.8"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.8",
