Switched from yarn to npm. Media player: fast forward and rewind hotkeys.

--- a/matui/Makefile
+++ b/matui/Makefile
@@ -4,7 +4,7 @@
 all: node_modules static/main.js
 
 node_modules: package.json
-	yarn install
+	npm install
 
 static/main.js: ${SRC}
 	INLINE_RUNTIME_CHUNK=false npx webpack --mode=production
