--- a/ui/package.json
+++ b/ui/package.json
@@ -9,19 +9,18 @@
 	"author": "Tero Oinas oinas.tero@gmail.com",
 	"license": "GPL2",
 	"devDependencies": {
-		"@emotion/react": "^11.9.0",
-		"@emotion/styled": "^11.8.1",
-		"@fontsource/roboto": "^4.5.4",
-		"@mui/icons-material": "^5.6.1",
-		"@mui/material": "^5.6.1",
-		"@mui/styles": "^5.6.1",
+		"@emotion/react": "^11.10.5",
+		"@fontsource/roboto": "^4.5.8",
+		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.3",
 		"axios": "^0.27.2",
-		"esbuild": "^0.14.39",
-		"pdfjs-dist": "^2.13.216",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"esbuild": "^0.16.14",
+		"pdfjs-dist": "^2.16.105",
+		"react": "^18.2.0",
+		"react-contenteditable": "^3.3.6",
+		"react-dom": "^18.2.0"
 	},
 	"dependencies": {
-		"react-contenteditable": "^3.3.6"
+		"@emotion/styled": "^11.10.5"
 	}
 }
